@@ -1,4 +1,12 @@
 2010-09-08  Robert Larice
+ * src/frontend/display.c ,
+ * src/frontend/display.h ,
+ * src/frontend/plotting/grid.c ,
+ * src/frontend/wdisp/windisp.c ,
+ * src/frontend/wdisp/winprint.c :
+    function rename, Arc() -> DevDrawArc()
+
+2010-09-08  Robert Larice
  * README.adms ,
  * autogen.sh ,
  * configure.ac ,
